[lab3] swagger fixes
