# swagger/models/model_price_changed.go
@@ -1,5 +1,5 @@
 package models
 
 type ModelPriceChanged struct {
-	Success bool `json:"price,omitempty"`
+	Success bool `json:"changed,omitempty"`
 }
